--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,23 @@
   -moz-osx-font-smoothing: grayscale;
 
   --input-color: rgb(0, 0, 0);
+  --card-color: rgb(50, 50, 50);
   --input-color-background: rgb(250, 250, 245);
 
   --border-radius-input: 8px;
-  --border-color-dark: rgb(150, 150, 150);
-  --border-color-light: rgb(190, 190, 190);
+  --border-color-dark: rgb(140, 140, 140);
+  --border-color-light: rgb(200, 200, 200);
 
   --font-title: 'Noto Serif', serif;
   --font-common: 'Roboto', sans-serif;
 
   --error-color-text: rgb(255, 100, 100);
   --error-color-backgroun: rgb(255, 240, 240);
+
+  --shadow-color: rgba(0, 0, 100, 0.2);
+
+  --color-scroll: rgb(0, 0, 100);
+  --color-scroll-background: rgb(190, 190, 190);
 
   --z-index-top: 2;
 }
@@ -62,14 +68,14 @@ body {
     background: color-mix(in srgb, var(--color-scroll) 90%, white 10%);
   }
   &::-webkit-scrollbar-track {
-    background: rgb(145, 145, 145);
+    background: var(--color-scroll-background);
     border-radius: 5px;
   }
   &::-webkit-scrollbar-track:hover {
-    background: gb(160, 160, 160);
+    background: var(--color-scroll-background);
   }
   &::-webkit-scrollbar-track:active {
-    background: rgb(160, 160, 160);
+    background: var(--color-scroll-background);
   }
   &::-webkit-scrollbar-corner {
     background: transparent;
